// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugins/ViewportBlock Overview 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      >
        <h3
          class="css-16ist9v-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="css-15owl46"
          >
            <div
              class="css-x60p33"
            >
              <div
                class="css-1vga9oy"
              >
                <div
                  class="css-12hibeq"
                >
                  <button
                    class="css-j69xip"
                  >
                    widths
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-eqxzio"
          >
            <div
              class="css-10nnqwz-ViewportBlock"
            >
              <div
                class="css-vkd8ti"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-x14tbo-Story"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-16ist9v-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text css-1cgogy4"
                >
                  320px
                </span>
              </div>
              <div
                class="css-vkd8ti"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-1voh55n-Story"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-16ist9v-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text css-1cgogy4"
                >
                  375px
                </span>
              </div>
              <div
                class="css-vkd8ti"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-6nxj2r-Story"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-16ist9v-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text css-1cgogy4"
                >
                  768px
                </span>
              </div>
              <div
                class="css-vkd8ti"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-pct2xa-Story"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-16ist9v-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text css-1cgogy4"
                >
                  1024px
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Plugins/ViewportBlock Sizes 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      >
        <h3
          class="css-16ist9v-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="css-15owl46"
          >
            <div
              class="css-x60p33"
            >
              <div
                class="css-1vga9oy"
              >
                <div
                  class="css-12hibeq"
                >
                  <button
                    class="css-j69xip"
                  >
                    widths
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-eqxzio"
          >
            <div
              class="css-10nnqwz-ViewportBlock"
            >
              <div
                class="css-vkd8ti"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-ntvi2e-Story"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-16ist9v-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text css-1cgogy4"
                >
                  xsmall
                </span>
              </div>
              <div
                class="css-vkd8ti"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-vhed6k-Story"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-16ist9v-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text css-1cgogy4"
                >
                  small
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
